# journey-os

./: .env.example  README.md  pyproject.toml  server.py  test_e2e.py  test_workflow.py
RTR/campaign-builder/: directreach-campaign-builder.php
RTR/journey-circle/: README.md  journey-circle.php  phpunit.xml
RTR/journey-circle/admin/: class-journey-circle-admin.php
RTR/journey-circle/admin/css/: journey-circle-admin.css  journey-circle-ai.css  journey-circle-asset.css  journey-circle-canvas.css  journey-circle-steps456.css  journey-circle-steps78.css  journey-circle.css  (+1 more)
RTR/journey-circle/docs/: FINAL_INTEGRATION_GUIDE.md  ITERATION_4_DOCUMENTATION.md  MERGE_GUIDE.md  MODIFICATIONS_TO_EXISTING_FILES.md  TESTING_CHECKLIST.md
RTR/journey-circle/includes/: class-journey-circle-activator.php  class-journey-circle-deactivator.php  class-journey-circle-loader.php  class-journey-circle.php
RTR/journey-circle/tests/: test-journey-circle.php
agents/: __init__.py
agents/email/: __init__.py  compose_field_note.py  context_assembler.py  insight_extractor.py  prompt_template_builder.py  room_templates.py
agents/generation/: email_composer.py
agents/matching/: __init__.py  asset_ranker.py  content_progression.py  intent_summarizer.py
agents/quality/: guardrail_inspector.py  revision_interpreter.py
config/: __init__.py  field_note_spec.py  guardrails.py  settings.py
graphs/: __init__.py  email_generation.py
models/: __init__.py  prospect.py  quality.py  state.py
services/: __init__.py  article_fetcher.py  llm_client.py  wordpress_client.py
(+48 files in other folders)
